[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "LabIFSC2"
version = "0.1.2"
description = "Cálculos de laboratório com Python, realize propagação de incertezas e conversão de medidas automaticamente"
authors = [{name="viniciusdutra314",email="dutravinisousa2@usp.br"},]
license = "GNU General Public License v3.0"
readme = "README.md"
packages=[{include = "LabIFSC2"}]
requires-python = ">=3.12"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
keywords=["LabIFSC","montecarlo","error_propagation","unit_conversion"]
dependencies=[
    "numpy >= 2.0",
    "pint >=0.24"
]


[project.urls]
"Documentation" = "https://labifsc2.readthedocs.io/pt-br/latest/"
"Github" = "https://github.com/viniciusdutra314/LabIFSC2"
"Issue Tracker"="https://github.com/viniciusdutra314/LabIFSC2/issues"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.4"
pymdown-extensions = "^11.0"
python-markdown-math = "^0.9"
mkdocstrings = "^1.0.4"
mkdocstrings-python = "^2.0.5"


[tool.poetry.group.test.dependencies]
labifsc = "^0.1.13"
uncertainties = "^3.2.2"
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
scipy = "^1.15.1"


[tool.poetry.group.linter.dependencies]
isort = "^8.0.1"
mypy = "^2.2.0"


[tool.poetry.group.testes.dependencies]
matplotlib = "^3.10.0"

[tool.mypy]
strict = true
disallow_any_explicit = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = 'tests/.*'

#all tasks

[tool.poetry.requires-plugins]
poethepoet = ">=0.35"

[tool.poe.tasks.tests]
help="Run the unit tests (pytest) and a type checker (mypy)"
sequence = ["type-checking","unit-tests"]

[tool.poe.tasks.type-checking]
help="Run a type checker (mypy)"
cmd="mypy LabIFSC2/"

[tool.poe.tasks.unit-tests]
help="Run the unit tests (pytest)"
cmd = "pytest -vv  -s "

[tool.poe.tasks.test-coverage]
help="Calculates test coverage (pytest-coverage)"
cmd = "pytest -vv -s --cov LabIFSC2/ --cov-append  --no-cov-on-fail --cov-branch --cov-report=html"

[tool.poe.tasks.docs]
help="Create the documentation"
cmd="mkdocs serve"
