[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LabIFSC2"
version = "0.1.2"
description = "Cálculos de laboratório com Python, realize propagação de incertezas e conversão de medidas automaticamente"
authors = [{name="viniciusdutra314",email="dutravinisousa2@usp.br"},]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
keywords=["LabIFSC","montecarlo","error_propagation","unit_conversion"]
dependencies=[
    "numpy >= 2.0",
    "pint >=0.24"
]

[project.urls]
"Documentation" = "https://labifsc2.readthedocs.io/pt-br/latest/"
"Github" = "https://github.com/viniciusdutra314/LabIFSC2"
"Issue Tracker"="https://github.com/viniciusdutra314/LabIFSC2/issues"

[tool.hatch.build.targets.wheel]
packages = ["LabIFSC2"]

[dependency-groups]
docs = [
    "mkdocs-material >=9.5.4,<10.0.0",
    "pymdown-extensions >=11.0,<12.0",
    "python-markdown-math >=0.9,<0.10",
    "mkdocstrings >=1.0.4,<2.0.0",
    "mkdocstrings-python >=2.0.5,<3.0.0",
]
linter = [
    "mypy >=2.2.0,<3.0.0",
]
test = [
    "labifsc >=0.1.13,<0.2.0",
    "uncertainties >=3.2.2,<4.0.0",
    "pytest >=9.1.1,<10.0.0",
    "pytest-cov >=7.1.0,<8.0.0",
    "scipy >=1.15.1,<2.0.0",
    "mutmut >=3.6.0,<4.0.0",
    "matplotlib >=3.10.0,<4.0.0",
]

[tool.mypy]
strict = true
disallow_any_explicit = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["mutants"]

[tool.mutmut]
source_paths = ["LabIFSC2/"]
pytest_add_cli_args = ["-x", "--tb=no", "--ignore=tests/doctest"]
